k8s/system/traefik/lily/resources/routes/ai.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ai-route

spec:
  routes:
    - kind: Rule
      match: Host(`ai.starry.blue`)
      priority: 10
      services:
        - name: external-ai
          port: 7860
      middlewares:
        - name: forward-auth-authentik
          namespace: authentik

    - kind: Rule
      match: Host(`ai.starry.blue`) && PathPrefix(`/outpost.goauthentik.io/`)
      priority: 15
      services:
        - name: authentik-server
          namespace: authentik
          port: http

---
apiVersion: v1
kind: Service
metadata:
  name: external-ai

spec:
  type: ExternalName
  externalName: 192.168.1.2
